--- a/templates/baru.html
+++ b/templates/baru.html
@@ -499,10 +499,11 @@
     <ul class="included">
         <li><span class="check green">✔</span> Recogida en hotel (algunas zonas)</li>
         <li><span class="check green">✔</span> Transporte en climatizado</li>
+        <li><span class="check green">✔</span> Desayuno (arepa 0 ensalada de frutas)</li>
         <li><span class="check green">✔</span> Transporte en lancha rápida para</li></strong>recorrido por las Islas del Rosario</p>
         <li><span class="check green">✔</span> Isla Majayura (Snorkeling)</li>
         <li><span class="check green">✔</span> Isla de Cholón </li></strong>(un Cóctel de camarones y uso de las instalaciones en agua o tierra)</p>
-        <li><span class="check green">✔</span> Isla Agua Azul </li></strong>(Silla y una hora de playa)</p>
+        <li><span class="check green">✔</span> Isla colcomo </li></strong>(Silla y una hora de playa)</p>
         <li><span class="check green">✔</span> Isla Baru Playa Tranquila</li></strong> (Uso de las instalaciones, vista del atardecer)</p>
         <li><span class="check green">✔</span> Almuerzo típico (Dos opciones)</li>
         <li><span class="check green">✔</span> Snack</li>
@@ -652,7 +653,7 @@
         <li><span class="check green">✔</span> Snorkel y explicación sobre la avioneta</li></strong> hundida de Pablo Escobar</p>
         <li><span class="check green">✔</span> Parada en Isla Cholón con degustación</li></strong>de camarón, uso de las instalaciones en agua y tierra</li>
         <li><span class="check green">✔</span> Almuerzo tipico en isla privada</li>
-        <li><span class="check green">✔</span> Isla Agua Azul </li></strong>(Silla y una hora de playa aproximada)</p>
+        <li><span class="check green">✔</span> Isla sol y papaya </li></strong>(Silla y una hora de playa aproximada)</p>
         <li><span class="check green">✔</span> Isla Baru Playa Tranquila</li></strong> (Uso de las instalaciones, vista del atardecer)</p>
         <li><span class="check green">✔</span> Vista del atardecer</li>
         <li><span class="check green">✔</span> Actividad de Plancton Luminoso</li>
@@ -807,6 +808,7 @@
         <li><span class="check green">✔</span> Almuerzo Tipico</li></strong>(Pescado o Pollo con arroz de coco, patacones y ensalada)</p>
         <li><span class="check green">✔</span> Traslado en lancha rápida a Playa</li></strong> Tranquila a las 2:40 PM aproxima</p>
         <li><span class="check green">✔</span> Atardecer en Playa Tranquila con sillas asoleadoras</li>
+        <li><span class="check green">✔</span> Snack</li>
         <li><span class="check green">✔</span> Actividad de Plancton Luminoso a las 7:00 PM</li>
         <li><span class="check green">✔</span> Retorno a Cartagena a las 8:00 PM</li>
     </ul>
@@ -875,9 +877,10 @@
         <li><span class="check green">✔</span> Transporte en bus climatizado</li>
         <li><span class="check green">✔</span> Guía acompañante</li>
         <li><span class="check green">✔</span> Coctel de bienvenida</li>
-        <li><span class="check green">✔</span> Traslado en lancha rápida a Playa Tranquila a las 3:00 PM</li>
+        <li><span class="check green">✔</span> Traslado en lancha rápida a Playa Tranquila</li>
         <li><span class="check green">✔</span> Almuerzo Tipico</li></strong>(Pescado o Pollo con arroz de coco, patacones y ensalada)</p>
         <li><span class="check green">✔</span> Sunset en Playa Tranquila con sillas asoleadoras</li>
+        <li><span class="check green">✔</span> Snack </li>
         <li><span class="check green">✔</span> Actividad de Plancton Luminoso </li>
         <li><span class="check green">✔</span> Retorno a Cartagena a las 8:00 PM</li>
     </ul>
@@ -954,6 +957,7 @@
         <li><span class="check green">✔</span> Almuerzo Tipico</li></strong>(Pescado o Pollo con arroz de coco, patacones y ensalada)</p>
         <li><span class="check green">✔</span> Traslado en lancha rápida a Playa Tranquila a las 3:00 PM</li>
         <li><span class="check green">✔</span> Atardecer en Playa Tranquila con sillas asoleadoras</li>
+        <li><span class="check green">✔</span> Snack</li>
         <li><span class="check green">✔</span> Actividad de Plancton Luminoso a las 7:00 PM</li>
         <li><span class="check green">✔</span> Retorno a Cartagena a las 8:00 PM</li>
     </ul>
