--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -54,17 +54,17 @@
         <h2>Nuestro Equipo</h2>
         <div class="equipo">
             <div class="miembro">
-                <img src="{{ url_for('static', filename='images/team1.jpg') }}" alt="Guía 1">
+                <img src="{{ url_for('static', filename='images/team1.jpg') }}" alt="Guía 1"draggable="false" oncontextmenu="return false">
                 <h3>Noheli Rodriguez</h3>
                 <p>fundadora y CEO</p>
             </div>
             <div class="miembro">
-                <img src="{{ url_for('static', filename='images/team2.jpg') }}" alt="Guía 2">
+                <img src="{{ url_for('static', filename='images/team2.jpg') }}" alt="Guía 2"draggable="false" oncontextmenu="return false">
                 <h3>Rosangelica Rodriguez</h3>
                 <p>Guia Especialista en Tours</p>
             </div>
             <div class="miembro">
-                <img src="{{ url_for('static', filename='images/team3.jpg') }}" alt="Guía 3">
+                <img src="{{ url_for('static', filename='images/team3.jpg') }}" alt="Guía 3"draggable="false" oncontextmenu="return false">
                 <h3>Darwin de la Rosa</h3>
                 <p>Asesor de ventas</p>
             </div>
